# algorithm

./: .clang-format  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build.jam
doc/: Doxyfile  Jamfile.v2  aho_corasick.qbk  algorithm.qbk  all_of.qbk  apply_permutation.qbk  contains.qbk  find.qbk  find_backward.qbk  find_last.qbk  find_not.qbk  indirect_sort.qbk  integer_sort.qbk  is_palindrome.qbk  is_partitioned_until.qbk  musser_nishanov.qbk  none_of.qbk  shuffle_weighted.qbk
example/: Jamfile.v2  Makefile  aho_corasick_example.cpp  apply_permutation_example.cpp  example_1.cpp  is_palindrome_example.cpp  search_example.cpp  shuffle_weighted_example.cpp
meta/: libraries.json
minmax/: index.html
performance/: Jamfile.v2  perf_is_palindrome.cpp
string/: index.html
test/: Jamfile.v2  aho_corasick_test.cpp  all_of_test.cpp  any_of_test.cpp  apply_permutation_test.cpp  bit_cast_test.cpp  bit_ceil_test.cpp  bit_floor_test.cpp  bit_width_test.cpp  byteswap_test.cpp  clamp_test.cpp  contains_test.cpp  copy_if_test1.cpp  countl_one_test.cpp  countl_zero_test.cpp  countr_one_test.cpp  countr_zero_test.cpp  exclusive_scan_test.cpp  find_backward_test.cpp  find_last_test.cpp  find_not_test.cpp  has_single_bit_test.cpp  inclusive_scan_test.cpp  indirect_sort_test.cpp  is_clamped_test.cpp  is_palindrome_test.cpp  iterate_test.cpp  move_if_test1.cpp  none_of_test.cpp  one_of_test.cpp  partition_point_test1.cpp  partition_subrange_test.cpp  popcount_test.cpp  power_test.cpp  reduce_test.cpp  rotl_test.cpp  rotr_test.cpp  search_test1.cpp  search_test2.cpp  (+13 more)
(+1756 files in other folders)
